--- a/booking.html
+++ b/booking.html
@@ -22,11 +22,39 @@
   </nav>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </header>
+<!-- HEADER -->
+<header>
+  <div class="logo">
+    <img src="assets/images/jk logo.png" alt="JK Logo">
+    <span>JK Photography</span>
+  </div>
+
+  <!-- Hamburger Icon -->
+  <div class="hamburger" id="hamburger">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <nav id="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About us</a>
+    <a href="services.html">Services</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="booking.html">Book Now</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<!-- FONT AWESOME -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+
 </head>
 
 
 <body>
-
+<section>
 <div class="booking-container">
 
 <h2>Book Your Event</h2>
@@ -54,6 +82,7 @@
 </div>
 <img src="assets/images/camera.png" class="camera-img">
 <p class="information">Information : After your booking, our JK Photography team will personally get in touch with you confirmation and further details.</p>
+</section>
 <!-- Success Popup -->
 <div class="success-box" id="successBox">
 <div class="success">
