--- a/services.html
+++ b/services.html
@@ -23,7 +23,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </header>
-    
+    <!-- HEADER -->
+<header>
+  <div class="logo">
+    <img src="assets/images/jk logo.png" alt="JK Logo">
+    <span>JK Photography</span>
+  </div>
+
+  <!-- Hamburger Icon -->
+  <div class="hamburger" id="hamburger">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <nav id="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About us</a>
+    <a href="services.html">Services</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="booking.html">Book Now</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<!-- FONT AWESOME -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+
 
 <body>
 <!-- SERVICES -->
@@ -174,4 +201,5 @@
       </div>
     </div>
 </section>
+<script src="assets/animations/script.js"></script>
 </body>
