small changes of booking form

--- a/booking.html
+++ b/booking.html
@@ -61,17 +61,17 @@
   <div class="field">
     <label for="name">name*</label>
     <span class="error" id="nameError">Fill your name</span>
-    <input type="text" name="name" id="name" placeholder="Enter your name">
+    <input type="text" name="name" id="name" required placeholder="Enter your name">
   </div>
   <div class="field">
     <label for="mobile">mobile*</label>
     <span class="error" id="mobileError">Enter your mobile number</span>
-    <input type="text" name="mobile" id="mobile" placeholder="Enter mobile number">
+    <input type="text" name="mobile" id="mobile" required placeholder="Enter mobile number">
   </div>
   <div class="field">
     <label for="date">date*</label>
     <span class="error" id="dateError">Select your date</span>
-    <input type="date" name="date" id="date">
+    <input type="date" name="date" id="date" required>
   </div>
   <div class="field">
     <label for="event">event</label>
