home page added video section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
   </div>
 </section>
 
+<section class="hero-video">
+  <!-- Thumbnail -->
+  <div class="video-wrapper" id="videoThumb" onclick="playInlineVideo()">
+    <img src="assets/images/hero1.jpg" alt="Wedding Film">
+    <div class="play-btn"></div>
+  </div>
+
+  <!-- Video (hidden initially) -->
+  <div class="video-wrapper hidden" id="videoBox">
+    <video id="heroVideo" controls>
+      <source src="assets/videos/teaser.mp4" type="video/mp4">
+      Your browser does not support video.
+    </video>
+  </div>
+</section>
+
 <!-- TESTIMONIALS -->
 <section class="testimonials">
   <h2>TESTIMONIALS</h2>
