--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <span>JK Photography</span>
   </div>
 
-  <!-- Hamburger Icon -->
+  <!-- HAMBURGER -->
   <div class="hamburger" id="hamburger">
-    <div></div>
-    <div></div>
-    <div></div>
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
 
   <nav id="nav-menu">
@@ -49,6 +49,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 <!-- FONT AWESOME -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -178,5 +179,17 @@
       </div>
     </div>
 </section>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+
+  const hamburger = document.getElementById("hamburger");
+  const navMenu = document.getElementById("nav-menu");
+
+  hamburger.addEventListener("click", function () {
+    hamburger.classList.toggle("active");
+    navMenu.classList.toggle("active");
+  });
+});
+</script>
 </body>
 </html>
