--- a/gallery.html
+++ b/gallery.html
@@ -28,11 +28,11 @@
     <span>JK Photography</span>
   </div>
 
-  <!-- Hamburger Icon -->
+  <!-- HAMBURGER -->
   <div class="hamburger" id="hamburger">
-    <div></div>
-    <div></div>
-    <div></div>
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
 
   <nav id="nav-menu">
@@ -109,5 +109,16 @@
 </section>
 
 <script src="assets/animations/script.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
 
+  const hamburger = document.getElementById("hamburger");
+  const navMenu = document.getElementById("nav-menu");
+
+  hamburger.addEventListener("click", function () {
+    hamburger.classList.toggle("active");
+    navMenu.classList.toggle("active");
+  });
+});
+</script>
 </body>
